<resources>
    <string name="app_name">First Degree</string>
    <string name="title_app">First Degree</string>
    <string name="title_coefficient_a">Coeficient a:</string>
    <string name="title_coeficient_b">Coeficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_next">Next</string>
    <string name="title_exit">Exit</string>
    <string name="title_result">Result</string>
    <string name="title_infinity">Infinity</string>
    <string name="title_nosolution">No solution</string>


</resources>